# proton-drive-for-linux

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.md.save  LICENSE  MIGRATION_TO_STANDALONE.md  Makefile  README.md  SYNC_SETUP.md  Sync_Conflict.md  TASKS.md  WORKER_DEBUGGING.md  manual_configure.py  package-lock.json  package.json  run-dev.sh
.act/: Dockerfile.debian12  Dockerfile.workflow
.agent/skills/ProtonDriveDev/: SKILL.md
.agent/workflows/: build_native.md  create_web_patch.md  run_dev.md
.github/: BUILD_MATRIX.md  CI_CD.md  SECURITY.md  SETUP_COMPLETE.md  WORKFLOWS.md  WORKFLOW_FIXES.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/agents/: .gitignore  4.1-Beast.chatmode.md  Architect.chatmode.md  CONTRIBUTING.md  LICENSE  ProtonDriveCppGtk4.chatmode.md  README.md  Thinking-Beast-Mode.chatmode.md  USAGE_GUIDE.md  Ultimate-Coder.chatmode.md  frontend-winner.chatmode.md  groktalk.chatmode.md  prudent_trader_chatter.chatmode.md  task-planner.chatmode.md
.github/workflows/: auto-release.yml  build-all-platforms.yml  build-flatpak.yml  build-linux-packages.yml  build-snap.yml  build.yml  generate-package-specs.yml  multi-format-release.yml  publish-aur.yml  publish-packages.yml  release.yml
AppDir-local/: .DirIcon  AppRun
AppDir-local/usr/share/applications/: com.proton.drive.desktop
WebClients/: .yarnrc.yml
WebClients/.yarn/patches/: @mlc-ai-web-llm-npm-0.2.32-df249f5180.patch
WebClients/applications/docs-editor/: package.json
WebClients/applications/drive/: package.json
WebClients/applications/drive/src/app/components/sections/ContextMenu/buttons/: RevisionsButton.tsx
WebClients/applications/mail/src/app/models/: tools.ts
WebClients/applications/pass-extension/safari/Proton Pass/DI/: SharedToolingContainer.swift
aur/: PKGBUILD
docs/: API-REFERENCE.md  ARCHITECTURE-INTERNALS.md  CONTRIBUTING.md  CROSS_DISTRO_TESTING.md  FILE_INDEX_SECURITY.md  FOLDER_DELETION_HANDLING.md  PREVENTING_FALSE_POSITIVES.md  QUICKSTART.md  README.md  SYNC_CONFLICT_FIX.md  SYNC_SAFETY_FEATURES.md  TROUBLESHOOTING.md
patches/: README.md
patches/common/: fix-tauri-worker-protocol.patch
protondrive/: gui.py
scripts/: adaptive-monitor.py  build-and-release.sh  build-local-appimage.sh  build-local-aur.sh  build-local-deb.sh  build-local-flatpak.sh  build-local-rpm.sh  build-local-snap.sh  build-webclients.sh  create-release.sh  create_stubs.py  fix_deps.py  install-all.sh  install-debian-ubuntu.sh  manage-sync-job.sh  setup-rclone-from-app.sh  setup-rclone-simple.sh  setup-rclone.sh  setup-sync-service.sh  sync-version.sh  test-build.sh  test-cache-cleanup.sh  test-sync-comprehensive.sh  test-sync-safety.sh  uninstall.sh
snap/: snapcraft.yaml  snapcraft.yaml.template
src-native/: CMakeLists.txt
src-native/packaging/: proton-drive.desktop
src-native/src/: app_window.cpp  app_window.hpp  app_window_actions.cpp  app_window_cloud.cpp  app_window_helpers.cpp  app_window_helpers.hpp  app_window_menus.cpp  app_window_monitor.cpp  app_window_polling.cpp  app_window_sync.cpp  app_window_ui.cpp  bandwidth_monitor.cpp  bandwidth_monitor.hpp  cloud_browser.cpp  cloud_browser.hpp  crypto.cpp  crypto.hpp  device_identity.cpp  device_identity.hpp  file_index.cpp  file_index.hpp  file_watcher.cpp  file_watcher.hpp  gtk_compat.hpp  logger.cpp  logger.hpp  main_native.cpp  network_monitor.cpp  network_monitor.hpp  notifications.cpp  notifications.hpp  settings.cpp  settings.hpp  sync_job_metadata.cpp  sync_job_metadata.hpp  sync_manager.cpp  sync_manager.hpp  sync_manager_device.cpp  trash_manager.cpp  trash_manager.hpp  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: com.proton.drive.desktop  proton-drive.desktop
src-tauri/src/: main.rs
