[package]
name = "proton-drive"
version = "1.1.0"
description = "Proton Drive desktop client"
authors = ["DonnieDice"]
license = "AGPL-3.0"
edition = "2021"

# Specify binary name explicitly to match everywhere
[[bin]]
name = "proton-drive"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"
futures = "0.3"
bytes = "1"

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]